--- a/src/app/akademik/aktifasi/aktifasi.component.html
+++ b/src/app/akademik/aktifasi/aktifasi.component.html
@@ -1,14 +1,100 @@
-<ol>
-	<li>Q : Kemana saya harus mengurus masalah aktifasi siadin mahasiswa, jika seandainya terjadi masalah dengan siadin saya?</li>
-	A : ke bagian tata usaha Udinus.<br><br>
-	<li>Q : Bagaimana Mekanisme Reset Password atau dan Aktifasi Siadin melalui TU?</li>
-	A : Pada saat TU akan melakukan reset password, TU berhak dan wajib menanyakan nama lengkap, nama orang tua, nomor telpon, HP, email, tanggal lahir yang bersangkutan dan tanggal lahir orang tua.<br><br>
-	<li>Q : Kenapa Saya tidak berhasil login SiAdin, akan tetapi Saya suda memasukkan password dengan benar ?</li>
-	A : Beberapa kemungkinan yaitu format NIM salah, atau NIM tidak ditemukan, atau salah password, atau Status akademik sudah berubah ke status Lulus, atau anda salah memasukkan password anda, bila lupa password sebaiknya reset password anda ke TU.<br><br>
-	<li>Q : Dimana Saya bisa mendapatkan informasi aktifasi SiAdin?</li>
-	A : BIAK, TU Fakultas masing-masing, PSI.<br><br>
-	<li>Q : Apa yang harus Saya lakukan apabila Saya lupa password SiAdin?</li>
-	A : Anda bisa ke TU Fakultas, PSI atau email ke psi.udinus@gmail.com, dengan menyiapkan data diri dan data orang tua secara lengkap. karena syarat aktifasi adalah melakukan cek dan update data.<br><br>
-	<li>Q : Bagaimana merubah status akademik dari Mangkir berganti menjadi Aktif?</li>
-	A : Silakan mengajukan permohonan aktif dengan membuat surat permohonan ditujukan ke Wakil Rektor I dan akan diteruskan ke Biro Akademik (BIAK). Dan tidak boleh lupa WAJIB menyelesaikan administratif keuangan terlebih dahulu.
-</ol>
+<div class="container ">
+  <div class="panel-group" id="faqAccordion">
+
+  	<div class="panel panel-default ">
+      <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
+       <h4 class="panel-title"><a class="ing">Q : Kemana saya harus mengurus masalah aktifasi siadin mahasiswa, jika seandainya terjadi masalah dengan siadin saya?</a></h4>
+      </div>
+      <div id="question0" class="panel-collapse collapse" style="height: 0px;">
+        <div class="panel-body">
+          <h5><span class="label label-primary">Answer</span></h5>
+          <p>ke bagian tata usaha Udinus.</p>
+        </div>
+      </div>
+    </div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question1">
+  		 <h4 class="panel-title"><a class="ing">Q: Bagaimana Mekanisme Reset Password atau dan Aktifasi Siadin melalui TU?</a></h4>
+  		</div>
+  		<div id="question1" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Pada saat TU akan melakukan reset password, TU berhak dan wajib menanyakan nama lengkap, nama orang tua, nomor telpon, HP, email, tanggal lahir yang bersangkutan dan tanggal lahir orang tua.</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question2">
+  		 <h4 class="panel-title"><a class="ing">Q : Kenapa Saya tidak berhasil login SiAdin, akan tetapi Saya suda memasukkan password dengan benar ?</a></h4>
+  		</div>
+  		<div id="question2" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Beberapa kemungkinan yaitu format NIM salah, atau NIM tidak ditemukan, atau salah password, atau Status akademik sudah berubah ke status Lulus, atau anda salah memasukkan password anda, bila lupa password sebaiknya reset password anda ke TU.</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question3">
+  		 <h4 class="panel-title"><a class="ing">Q : Dimana Saya bisa mendapatkan informasi aktifasi SiAdin?</a></h4>
+  		</div>
+  		<div id="question3" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>BIAK, TU Fakultas masing-masing, PSI.</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question4">
+  		 <h4 class="panel-title"><a class="ing">Q : Apa yang harus Saya lakukan apabila Saya lupa password SiAdin?</a></h4>
+  		</div>
+  		<div id="question4" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Anda bisa ke TU Fakultas, PSI atau email ke psi.udinus@gmail.com, dengan menyiapkan data diri dan data orang tua secara lengkap. karena syarat aktifasi adalah melakukan cek dan update data.</p>
+  			</div>
+  		</div>
+  	</div>
+
+    <div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question5">
+  		 <h4 class="panel-title"><a class="ing">Q : Bagaimana merubah status akademik dari Mangkir berganti menjadi Aktif?</a></h4>
+  		</div>
+  		<div id="question5" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Silakan mengajukan permohonan aktif dengan membuat surat permohonan ditujukan ke Wakil Rektor I dan akan diteruskan ke Biro Akademik (BIAK). Dan tidak boleh lupa WAJIB menyelesaikan administratif keuangan terlebih dahulu.</p>
+  			</div>
+  		</div>
+  	</div>
+
+    <div class="panel panel-default ">
+    	<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question6">
+    	 <h4 class="panel-title"><a class="ing">Q : Apa yang harus Saya lakukan apabila Saya lupa password SiAdin?</a></h4>
+    	</div>
+    	<div id="question6" class="panel-collapse collapse" style="height: 0px;">
+    		<div class="panel-body">
+    			<h5><span class="label label-primary">Answer</span></h5>
+    			<p>Anda bisa ke TU Fakultas, PSI atau email ke psi.udinus@gmail.com, dengan menyiapkan data diri dan data orang tua secara lengkap. karena syarat aktifasi adalah melakukan cek dan update data.</p>
+    		</div>
+    	</div>
+    </div>
+
+    <div class="panel panel-default ">
+    	<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question7">
+    	 <h4 class="panel-title"><a class="ing">Q : Apa yang harus Saya lakukan apabila Saya lupa password SiAdin?</a></h4>
+    	</div>
+    	<div id="question7" class="panel-collapse collapse" style="height: 0px;">
+    		<div class="panel-body">
+    			<h5><span class="label label-primary">Answer</span></h5>
+    			<p>Anda bisa ke TU Fakultas, PSI atau email ke psi.udinus@gmail.com, dengan menyiapkan data diri dan data orang tua secara lengkap. karena syarat aktifasi adalah melakukan cek dan update data.</p>
+    		</div>
+    	</div>
+    </div>
+  </div>
+</div>
