--- a/src/app/akademik/heregristrasi/heregristrasi.component.html
+++ b/src/app/akademik/heregristrasi/heregristrasi.component.html
@@ -1,3 +1,89 @@
-<ol>
-	<li>Q : Apa yang dimaksud dengan Heregristrasi?</li>A : Pendaftaran ulang bagi mahasiswa yang akan kuliah lagi dengan mengupdate data mahasiswa.<br><br><li>Q : Apa beda dari Heregristrasi dengan Registrasi?</li>A : Herregistrasi merupakan pendaftaran ulang bagi mahasiswa Udinus yang ingin melanjutkan perkuliahan di semester baru dengan mengupdate data mahasiswa, Sedangkan registrasi adalah pendaftaran yang ditujukan untuk mahasiswa baru yang ingin mengikuti perkuliahan di Udinus sehingga datanya akan tersimpan oleh sistem.<br><br><li>Q : Kapan herregristrasi dilaksanakan?</li>A : Setiap awal semester sebelum perkuliahan dimulai.<br><br><li>Q : Kemana Saya harus mengurus herregristrasi?</li>A : ke BIAK.<br><br><li>Q : Apa saja persyaratan herregristrasi?</li>A : Melakukan pendaftaran ulang dan menyelesaikan administrasi keuangan.<br><br><li>Q : Dimana pembayaran dapat dilakukan?</li>A : Bank Jateng, BRI dan Bank Mandiri.<br><br><li>Q : Bagaimana cara membayar dan apa saja yang harus Saya lakukan?</li>A : Setelah melakukan pembayaran pada Bank diatas, Anda akan menerima slip/resi. Fotocopy slip/resi tersebut kemudian tuliskan NIM dan Nama anda lalu serahkan ke BIKU.
-</ol>
+<div class="container ">
+  <div class="panel-group" id="faqAccordion">
+
+  	<div class="panel panel-default ">
+      <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
+       <h4 class="panel-title"><a class="ing">Q : Apa yang dimaksud dengan Heregristrasi?</a></h4>
+      </div>
+      <div id="question0" class="panel-collapse collapse" style="height: 0px;">
+        <div class="panel-body">
+          <h5><span class="label label-primary">Answer</span></h5>
+          <p>Pendaftaran ulang bagi mahasiswa yang akan kuliah lagi dengan mengupdate data mahasiswa.</p>
+        </div>
+      </div>
+    </div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question1">
+  		 <h4 class="panel-title"><a class="ing">Q : Apa beda dari Heregristrasi dengan Registrasi?</a></h4>
+  		</div>
+  		<div id="question1" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Herregistrasi merupakan pendaftaran ulang bagi mahasiswa Udinus yang ingin melanjutkan perkuliahan di semester baru dengan mengupdate data mahasiswa, Sedangkan registrasi adalah pendaftaran yang ditujukan untuk mahasiswa baru yang ingin mengikuti perkuliahan di Udinus sehingga datanya akan tersimpan oleh sistem.</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question2">
+  		 <h4 class="panel-title"><a class="ing">Q : Kapan herregristrasi dilaksanakan?</a></h4>
+  		</div>
+  		<div id="question2" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Setiap awal semester sebelum perkuliahan dimulai.</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question3">
+  		 <h4 class="panel-title"><a class="ing">Q : Kemana Saya harus mengurus herregristrasi?</a></h4>
+  		</div>
+  		<div id="question3" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>ke BIAK.</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question4">
+  		 <h4 class="panel-title"><a class="ing">Q : Apa saja persyaratan herregristrasi?</a></h4>
+  		</div>
+  		<div id="question4" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Melakukan pendaftaran ulang dan menyelesaikan administrasi keuangan.</p>
+  			</div>
+  		</div>
+  	</div>
+
+    <div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question5">
+  		 <h4 class="panel-title"><a class="ing">Q : Dimana pembayaran dapat dilakukan?</a></h4>
+  		</div>
+  		<div id="question5" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Bank Jateng, BRI dan Bank Mandiri.</p>
+  			</div>
+  		</div>
+  	</div>
+
+    <div class="panel panel-default ">
+    	<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question6">
+    	 <h4 class="panel-title"><a class="ing">Q : Bagaimana cara membayar dan apa saja yang harus Saya lakukan?</a></h4>
+    	</div>
+    	<div id="question6" class="panel-collapse collapse" style="height: 0px;">
+    		<div class="panel-body">
+    			<h5><span class="label label-primary">Answer</span></h5>
+    			<p>Setelah melakukan pembayaran pada Bank diatas, Anda akan menerima slip/resi. Fotocopy slip/resi tersebut kemudian tuliskan NIM dan Nama anda lalu serahkan ke BIKU.</p>
+    		</div>
+    	</div>
+    </div>
+
+  </div>
+</div>
