--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -30,9 +30,9 @@
             <div class="fontmenu">
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav modif3">
-                        <li class="menu" id="ilanghome"><a href="http://dinus.ac.id/" style="border-right: 1px solid #245580;"><strong><i class="fa fa-home"></i></strong></a></li>
+                        <li class="menu" id="ilanghome"><a href="http://dinus.ac.id/" style="border-right: 1px solid #245580; color:white;"><strong><i class="fa fa-home"></i></strong></a></li>
                         <li class="menu dropdown">
-                            <a href="#" class="dropbtn" data-toggle="dropdown" style="border-right: 1px solid #245580;">ADMISSION <!-- <span class="caret"></span>--></a>
+                            <a href="#" class="dropbtn" data-toggle="dropdown" style="border-right: 1px solid #245580; color:white;">ADMISSION<!-- <span class="caret"></span>--></a>
                               <ul class="dropdown-menu menu-utama dropdown-content">
 
                                 <li class="dropdown-submenu">
@@ -52,10 +52,10 @@
                             </ul>
                         </li>
 
-                        <li class="menu"><a href="http://dinus.ac.id/news" style="border-right: 1px solid #245580;">NEWS & EVENTS</a></li>
+                        <li class="menu"><a href="http://dinus.ac.id/news" style="border-right: 1px solid #245580; color:white;">NEWS & EVENTS</a></li>
 
                         <li class="menu dropdown">
-                            <a href="#" class="dropbtn" data-toggle="dropdown" style="border-right: 1px solid #245580;">PROGRAMS</a>
+                            <a href="#" class="dropbtn" data-toggle="dropdown" style="border-right: 1px solid #245580; color:white;">PROGRAMS</a>
                             <ul class="dropdown-menu menu-utama dropdown-content">
                                 <li class="dropdown-submenu">
                                     <a tabindex="0" data-toggle="dropdown" style="cursor:pointer;">Faculty</a>
@@ -76,7 +76,7 @@
                         </li>
 
                         <li class="menu dropdown">
-                            <a href="#" class="dropbtn" data-toggle="dropdown" style="border-right: 1px solid #245580;">ABOUT</a>
+                            <a href="#" class="dropbtn" data-toggle="dropdown" style="border-right: 1px solid #245580; color:white;">ABOUT</a>
                             <ul class="dropdown-menu menu-utama dropdown-content">
                                 <li><a href="http://dinus.ac.id/greetings">Greetings From Rector</a></li>
                                 <li><a href="http://dinus.ac.id/vision">Vision & Mission</a></li>
@@ -91,7 +91,7 @@
                                 <li><a href="http://www.dinus.ac.id/faq/" target="_blank">FAQ </a></li>
                             </ul>
                         </li>
-                        <li class="menu"><a routerLink="/" style="border-right: 1px solid #245580;">FAQ</a></li>
+                        <li class="menu"><a routerLink="/" style="border-right: 1px solid #245580; color:white;">FAQ</a></li>
 
 
 
