delete home button

--- a/src/app/ask-a-question/ask/ask.component.html
+++ b/src/app/ask-a-question/ask/ask.component.html
@@ -12,7 +12,7 @@
         <h2 class="modal-title">Berasal dari kalangan manakah anda ?</h2>
       </div>
       <div class="modal-body text-center">
-        <button  class="side btn btn-info btn-lg" data-dismiss="modal" routerLink="/">Home </button>
+        <!-- <button  class="side btn btn-info btn-lg" data-dismiss="modal" routerLink="/">Home </button> -->
         <button  class="side btn btn-info btn-lg" data-dismiss="modal" routerLink="/ask-a-question/mahasiswa">Mahasiswa </button>
         <button  class="side btn btn-info btn-lg" data-dismiss="modal" routerLink="/ask-a-question/dosen">Dosen </button>
         <button  class="side btn btn-info btn-lg" data-dismiss="modal" routerLink="/ask-a-question/umum">Umum </button>
