--- a/src/app/ask-a-question/dosen/dosen.component.html
+++ b/src/app/ask-a-question/dosen/dosen.component.html
@@ -10,14 +10,7 @@
     <div class="form-group">
       <label class="col-sm-2 control-label">NIDN</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" placeholder="NIM">
-      </div>
-    </div>
-
-    <div class="form-group">
-      <label class="col-sm-2 control-label">Email</label>
-      <div class="col-sm-10">
-        <input type="email" class="form-control" placeholder="Email">
+        <input type="text" class="form-control" placeholder="NIDN">
       </div>
     </div>
 
