--- a/src/app/ask-a-question/umum/umum.component.html
+++ b/src/app/ask-a-question/umum/umum.component.html
@@ -9,13 +9,20 @@
   <form class="form-horizontal">
 
     <div class="form-group">
+      <label class="col-sm-2 control-label">Nama</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" placeholder="Nama">
+      </div>
+    </div>
+
+    <div class="form-group">
       <label class="col-sm-2 control-label">Email</label>
       <div class="col-sm-10">
         <input type="email" class="form-control" placeholder="Email">
       </div>
     </div>
 
-    <div class="form-group">
+    <!-- <div class="form-group">
       <label class="col-sm-2 control-label">Kategori</label>
       <div class="col-sm-10">
         <select class="form-control">
@@ -40,7 +47,7 @@
           <option>Wisuda</option>
         </select>
       </div>
-    </div>
+    </div> -->
 
     <div class="form-group">
       <label class="col-sm-2 control-label">Pertanyaan : (maks. 70 karakter)</label>
